add header and footer

--- a/src/app/pages/catalogo/catalogo.component.html
+++ b/src/app/pages/catalogo/catalogo.component.html
@@ -1,9 +1,6 @@
 <h2>Catálogo</h2>
 
 <div class="produtos">
-  <div class="produto" *ngFor="let produto of produtos">
-    <h3>{{ produto.nome }}</h3>
-    <p>Preço: R$ {{ produto.preco }}</p>
-    <button (click)="verDetalhes(produto.id)">Ver detalhes</button>
-  </div>
+  <div class="produto" >
+   </div>
 </div>
