--- a/src/app/pages/product-list/product-list.component.html
+++ b/src/app/pages/product-list/product-list.component.html
@@ -1,1 +1,12 @@
-<p>product-list works!</p>
+<div class="page-container">
+  <section class="category-section" *ngFor="let group of groupedProducts">
+    <h2 class="section-title">{{ group.category }}</h2>
+
+    <div class="products-scroll-container">
+      <div class="product-card-horizontal" *ngFor="let product of group.products">
+        <p class="item-name">{{ product.name }}</p>
+        <p class="support-text">R$ {{ product.price.toFixed(2) }}</p>
+      </div>
+    </div>
+  </section>
+</div>
