--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
   <a routerLink="/login">Login</a>
 </nav>
 
-<router-outlet></router-outlet>
-<app-layout></app-layout>
+<app-layout>
+  <router-outlet></router-outlet>
+</app-layout>
