--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="main-header">
   <div class="logo-container">
+    <img class="logo" ngSrc="../../../../assets/logo.png" fill alt="Rei do Açaí Logo" />
     <h1>Rei do Açaí</h1>
   </div>
 </header>
