fix part header'

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="main-footer">
-  <a class="nav-item">
+  <a class="nav-item" href="/products">
     <span>Icon</span>
     <span class="nav-text">Produtos</span>
   </a>
