--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,4 +3,15 @@
     <img class="logo" ngSrc="../../../../assets/logo.png" fill alt="Rei do Açaí Logo" />
     <h1>Rei do Açaí</h1>
   </div>
+
+  <div class="cart-icon-container" routerLink="/checkout">
+    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="cart-icon">
+      <circle cx="9" cy="21" r="1"></circle>
+      <circle cx="20" cy="21" r="1"></circle>
+      <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+    </svg>
+    <span class="cart-badge" *ngIf="(cartItemCount$ | async) as count">
+      {{ count > 9 ? '9+' : count }}
+    </span>
+  </div>
 </header>
